arc-runner-ns/arc-runner/templates/arc-runner-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: arc-runner-policies
  namespace: arc-runners
spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress

  ingress:
      - from:
          - podSelector: { }  # pods from same namespace
      - from:
          - podSelector: { }  # pods from platform
            namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: platform

  egress:
    - to:
        - podSelector: { }
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    # Kubernetes API server or listener
    - to:
        - ipBlock:
            cidr: 10.20.16.0/20
      ports:
        - port: 443
          protocol: TCP
        - port: 8200
          protocol: TCP

    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - port: 80
        - port: 443
        - port: 8200
